--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@fontsource-variable/inter": "^5.0.16",
+    "@fontsource-variable/open-sans": "^5.0.25",
     "@vanilla-extract/css": "^1.14.1",
     "@vanilla-extract/webpack-plugin": "^2.3.6",
     "framer-motion": "^11.0.5",
