--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "framer-motion": "^11.0.5",
     "gatsby": "^5.13.2",
     "gatsby-plugin-image": "^3.13.1",
+    "gatsby-plugin-manifest": "^5.13.1",
+    "gatsby-plugin-offline": "^6.13.1",
     "gatsby-plugin-sharp": "^5.13.1",
     "gatsby-plugin-vanilla-extract": "^4.0.2",
     "gatsby-source-filesystem": "^5.13.1",
