--- a/package.json
+++ b/package.json
@@ -16,24 +16,27 @@
   },
   "dependencies": {
     "@chakra-ui/gatsby-plugin": "^3.1.3",
+    "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.2",
-    "@emotion/react": "^11.11.3",
+    "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@fontsource-variable/inter": "^5.0.16",
     "@fontsource-variable/open-sans": "^5.0.25",
     "@vanilla-extract/css": "^1.14.1",
     "@vanilla-extract/webpack-plugin": "^2.3.6",
-    "framer-motion": "^11.0.5",
     "gatsby": "^5.13.2",
     "gatsby-plugin-image": "^3.13.1",
     "gatsby-plugin-manifest": "^5.13.1",
     "gatsby-plugin-offline": "^6.13.1",
+    "gatsby-plugin-sass": "^6.13.1",
     "gatsby-plugin-sharp": "^5.13.1",
     "gatsby-plugin-vanilla-extract": "^4.0.2",
     "gatsby-source-filesystem": "^5.13.1",
     "gatsby-transformer-sharp": "^5.13.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
