--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fontsource-variable/open-sans": "^5.0.25",
     "@vanilla-extract/css": "^1.14.1",
     "@vanilla-extract/webpack-plugin": "^2.3.6",
+    "formik": "^2.4.5",
     "gatsby": "^5.13.2",
     "gatsby-plugin-image": "^3.13.1",
     "gatsby-plugin-manifest": "^5.13.1",
