improve form, add inline form

--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource-variable/inter": "^5.0.16",
     "@fontsource-variable/open-sans": "^5.0.25",
+    "@react-input/mask": "^1.0.22",
     "@vanilla-extract/css": "^1.14.1",
     "@vanilla-extract/webpack-plugin": "^2.3.6",
     "formik": "^2.4.5",
+    "framer-motion": "^11.0.8",
     "gatsby": "^5.13.2",
     "gatsby-plugin-image": "^3.13.1",
     "gatsby-plugin-manifest": "^5.13.1",
@@ -38,6 +40,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-slick": "^0.30.2",
+    "sass": "^1.71.1",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
