--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@fontsource-variable/inter": "^5.0.16",
     "@fontsource-variable/open-sans": "^5.0.25",
     "@react-input/mask": "^1.0.22",
+    "@tanstack/react-query": "^5.25.0",
     "@vanilla-extract/css": "^1.14.1",
     "@vanilla-extract/webpack-plugin": "^2.3.6",
+    "axios": "^1.6.7",
     "formik": "^2.4.5",
     "framer-motion": "^11.0.8",
     "gatsby": "^5.13.2",
@@ -44,6 +46,7 @@
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.20.1",
     "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^9.1.0",
